--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,102 @@
-$primary : #003A59;
+$blue-400 : #003A59;
+$blue-300 : #00598D;
+$green-300 : #064e3b;
 
-html, body {
-    height: 80vh !important;
-    margin: 0;
-    background: #F4FAFF ;
-  }
-
-.header {
-    color: $primary;
+html,
+body {
+  height: 100vh !important;
+  margin: 0;
+  background: #F4FAFF;
 }
+
 .App {
-    background: linear-gradient(180deg, #ffffff 50%, #F4FAFF 50%);
-    height:80vh !important;
+  background: linear-gradient(180deg, #ffffff 50%, #F4FAFF 50%);
+  height: 80vh !important;
+}
+
+.Header__title {
+  color: $blue-400;
+}
+
+.Header__subtitle {
+  color: #728197;
+}
+
+.Card {
+  background: #FFFFFF;
+  border: 1px solid #E3E9F1;
+  box-sizing: border-box;
+  border-radius: 8px;
+
+  &__input {
+    background: #FFFFFF;
+    border: 2px solid #CCD6E1;
+    box-sizing: border-box;
+    border-radius: 4px;
+
+    &:focus {
+      border: 2px solid $blue-300;
+    }
+
+    &__label {
+      color: #2E3849;
+    }
   }
 
-//   .list 
-//       &__item {
-//           color: #754311;
-//       }
+  &__infor {
+    color: #728197;
+  }
+
+  &__button {
+    border-radius: 4px;
+
+    &--primary {
+      background: $blue-300;
+    }
+
+    &--secondary {
+      background: $green-300;
+    }
+  }
+}
+
+.List {
+
+  &__count {
+    color: #2E3849;
+  }
+
+  &__item {
+    background: #FFFFFF;
+    border: 1px solid #EEF3F8;
+    box-sizing: border-box;
+    border-radius: 4px;
+
+    &__name {
+      color: #2E3849;
+    }
+
+    &__exp {
+      color: #728197;
+    }
+
+    &__label {
+      border-radius: 22px;
+
+      &--exp {
+        background: #FFEBEB;
+        color: #752B2B;
+      }
+
+      &--healthy {
+        background: #DBFFE6;
+        color: #23553E;
+      }
+
+      &--expsoon {
+        background: #FFFDCC;
+        color: #754311;
+      }
+    }
+  }
+}
